--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "dictionary cli tool",
   "main": "index.js",
   "bin": "./index.js",
-  "dependencies": {},
+  "dependencies": {
+    "node-fetch": "2.6.0",
+    "chalk": "3.0.0",
+    "dotenv": "8.2.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
