--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "chalk": "3.0.0",
     "dotenv": "8.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "docma": "^3.2.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
